# ecs

./: CMakeLists.txt  LICENSE  readme.txt
editor/: CMakeLists.txt  Makefile  cmake_install.cmake
editor/src/: editor.cpp  editor.h  main.cpp
editor/src/modifiers/: modifier.h  selection.cpp  selection.h  transform.cpp  transform.h
editor/src/utils/: filenode.cpp  filenode.h  uiutils.cpp  uiutils.h  utils.cpp  utils.h
editor/src/views/: assets.cpp  assets.h  game.cpp  game.h  modifiers.cpp  modifiers.h  registry.cpp  registry.h
engine/: CMakeLists.txt  Makefile  cmake_install.cmake
engine/include/: application.h  engine.h  registry.h  serialize.h  shapes.h  storage.h  types.h
engine/include/components/: core.h  render.h  transform.h
engine/include/systems/: commsys.h  inputsys.h  loadsys.h  rendersys.h  resourcesys.h  system.h  transformsys.h  uisys.h
engine/resources/shaders/: Untitled-1.txt  basic.color.frag  basic.color.json  basic.color.vert  basic.frag  basic.json  basic.material.frag  basic.material.json  basic.material.vert  basic.shader  basic.shader.syaml  basic.shader.yaml  basic.vert  gbuf.frag  gbuf.json  gbuf.vert  main.frag  main.vert  make copy.py  make.py  renderpass.yaml  ssao.frag  ssao.json  ssao.vert  ssao2.frag  ssao2.json  ssao2.vert  textured.material.frag  textured.material.json  textured.material.vert
engine/resources/shaders/graphs/: basic.color.gv  basic.gv  basic.material.gv  gbuf.gv  ssao2.gv  textured.material.gv
engine/src/: application.bak  application.cpp  engine.cpp  registry.cpp  storage.cpp  types.cpp
engine/src/systems/: commsys.cpp  inputsys.cpp  loadsys.cpp  rendersys.cpp  resourcesys.cpp  system.cpp  transformsys.cpp  uisys.cpp
game/: CMakeLists.txt  Makefile  cmake_install.cmake  game_export.h
game/src/: game.cpp  game.h
player/: CMakeLists.txt  Makefile  cmake_install.cmake
player/src/: player.cpp
